0.9.2 - currently working on

Features:

Bug fixes:
- [#5683] E-mail salutation is in German even for English BE

Cleanup:

Changes:


0.9.1 - released 2016-03-11

Features:
- [#5653] Add a configuration for PDF rendering of the manual

Bug fixes:
- [#5668] 1:n associations also load deleted models
- [#5411] Test failure if no FE user records are in the DB
- [#5321] Update .htaccess to be Apache 2.4 compatible


0.9.0 - released 2015-08-20

Features:
- [#5371] Template::getSubpartWithLabels
- [#5354] Clone feature for models
- [#5250] Allow setting the namespace for the configuration check

Bug fixes:
- [#5370] Safeguard List::uids
- [#5331] Crash in the BE module: extbase base test class not found
- [#5330] Avoid login cookies from the phpMyAdmin cookies
- [#5306] PHP strict error in DataMapper
- [#5279] Removed multiple Composer autoloaders for loading Emogrifier
- [#5265] Deprecation log message in the unit tests for checkLocale
- [#5255] Test failures and crashes about TSFE->cObj
- [#5245] Test extension icons not visible in EM
- [#5251] 1:n associations are loaded with empty data
- [#5244] Allow PHP up to 5.6.99
- [#5247] Drop bogus test fakeFrontEndCobjImageCreatesImageTagForExistingImageFile
- [#5185] Change the extension name in the manual from "phpunit" to "oelib"

Cleanup:
- [#5335] Make the calls to static PHPUnit methods static
- [#5267] Rename "Salutationswitcher" to "SalutationSwitcher"
- [#5252] Rename the unit test classes

Changes:
- [#5270] Remove deprecated functions
- [#5268] Deprecate getPrefixedMarkers and checkCssClassNames
- [#5266] Improve the performance of TemplateHelper::setLabels
- [#5258] Deprecate TemplateHelper::setCss
- [#5248] Do not rely on sr_feuser_register for tests
- [#5229] Deprecate ConfigCheck::checkLocale
- [#5223] Remove the reference to 3rd party libraries from the manual
- [#5216] Mark the extension as stable


0.8.0 - released 2015-01-06
- [#5185] Feature: Convert the manual to ReST