@@ -11,21 +11,42 @@
  *
  * The TYPO3 project - inspiring people to share!
  */
+use TYPO3\CMS\Frontend\Authentication\FrontendUserAuthentication;
 
 /**
- * This class provides a front-end user without cookies.
- *
- * @package TYPO3
- * @subpackage tx_oelib
+ * This XCLASS makes sure no FE login cookies are sent during the unit tests.
  *
  * @author Oliver Klee <typo3-coding@oliverklee.de>
  */
-class Tx_Oelib_FrontEnd_UserWithoutCookies extends \TYPO3\CMS\Frontend\Authentication\FrontendUserAuthentication {
+class Tx_Oelib_FrontEnd_UserWithoutCookies extends FrontendUserAuthentication
+{
 	/**
-	 * Sets no session cookies at all.
+	 * @var bool
+	 */
+	public $forceSetCookie = false;
+
+	/**
+	 * @var bool
+	 */
+	public $dontSetCookie = true;
+
+	/**
+	 * Sets no session cookie at all.
 	 *
 	 * @return void
 	 */
-	protected function setSessionCookie() {
+	protected function setSessionCookie()
+	{
+	}
+
+	/**
+	 * Unsets no cookie at all.
+	 *
+	 * @param string $cookieName
+	 *
+	 * @return void
+	 */
+	public function removeCookie($cookieName)
+	{
 	}
 }
